# check_commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  justfile  pyproject.toml
src/: main.py
src/check_commit/: __init__.py
tests/: test_check_msg.py
