[project]
name = "check_commit"
version = "0.1.0"
license = "AGPL-3.0-only"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "D",
  "UP",
  "YTT",
  "ANN",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "EM",
  "EXE",
  "ISC",
  "ICN",
  "G",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  "ARG",
  "PTH",
  "TD",
  "TC",
  "FIX",
  "ERA",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  "PERF",
  "FURB",
  "LOG",
  "RUF",
  # "AIR",
  # "FAST",
  # "DJ"
  # "NPY",
  # "PD",
]

ignore = ["D203", "D212", "COM812", "ISC001", "TD002", "TD003", "FIX"]

extend-per-file-ignores."test_*" = ["S101", "S311", "INP001", "PLR2004"]

task-tags = ["FIX", "TODO", "HACK", "WARN", "PERF", "NOTE"]
